# GEO-INFER

./: .cursorrules  .gitignore  .python-version  API_SCHEMA_INDEX.md  CONTRIBUTING.md  FINAL_API_DOCUMENTATION_SUMMARY.md  LICENSE  README.md  TECHNICAL_DOCUMENTATION_ASSESSMENT.md  framework_test_report.json  h3_v4_migration_report.md  pyproject.toml  pytest.ini
GEO-INFER-HEALTH/: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
GEO-INFER-HEALTH/config/: data_sources.yaml  health_config.yaml  schema.json
GEO-INFER-HEALTH/docs/: api_schema.yaml
GEO-INFER-HEALTH/examples/: advanced_health_analysis.py  example_disease_surveillance.py  example_environmental_health.py  example_healthcare_accessibility.py
GEO-INFER-HEALTH/src/geo_infer_health/: __init__.py  cli.py
GEO-INFER-HEALTH/src/geo_infer_health/api/: __init__.py  api_disease_surveillance.py  api_environmental_health.py  api_healthcare_accessibility.py
GEO-INFER-HEALTH/src/geo_infer_health/core/: __init__.py  disease_surveillance.py  enhanced_disease_surveillance.py  environmental_health.py  healthcare_accessibility.py
GEO-INFER-HEALTH/src/geo_infer_health/models/: __init__.py  data_models.py
GEO-INFER-HEALTH/src/geo_infer_health/utils/: __init__.py  advanced_geospatial.py  config.py  geospatial_utils.py  logging.py
GEO-INFER-HEALTH/tests/: __init__.py  conftest.py
GEO-INFER-HEALTH/tests/integration/: test_full_workflow.py
GEO-INFER-HEALTH/tests/unit/: test_advanced_geospatial.py  test_config.py  test_disease_surveillance.py  test_environmental_health.py  test_geospatial_utils.py  test_healthcare_accessibility.py  test_models.py
GEO-INFER-MATH/: README.md  pyproject.toml
GEO-INFER-MATH/docs/: api_schema.yaml  module_architecture.md
GEO-INFER-MATH/docs/tutorials/: getting_started.md
GEO-INFER-MATH/examples/: advanced_geospatial_analysis.py  performance_benchmark.py  spatial_statistics_example.py
GEO-INFER-MATH/src/geo_infer_math/: __init__.py
GEO-INFER-MATH/src/geo_infer_math.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
GEO-INFER-MATH/src/geo_infer_math/api/: __init__.py  spatial_analysis.py
GEO-INFER-MATH/src/geo_infer_math/core/: __init__.py  geometry.py  graph_theory.py  interpolation.py  linalg_tensor.py  numerical_methods.py  optimization.py  spatial_statistics.py  transforms.py
GEO-INFER-MATH/src/geo_infer_math/models/: __init__.py  clustering.py  regression.py
GEO-INFER-MATH/src/geo_infer_math/utils/: __init__.py  constants.py  conversion.py  decorators.py  parallel.py  validation.py
GEO-INFER-MATH/tests/: test_graph_theory.py  test_linalg_tensor.py  test_numerical_methods.py  test_regression.py  test_spatial_statistics.py  test_transforms.py
GEO-INFER-PEP/: .gitignore  README.md  pyproject.toml
GEO-INFER-PEP/docs/: CONTRIBUTING_PEP.md  api_schema.yaml
GEO-INFER-PEP/examples/: README.md  basic_crm_example.py  basic_hr_example.py  onboarding_workflow_example.py
GEO-INFER-PEP/src/geo_infer_pep/: __init__.py  methods.py
GEO-INFER-PEP/src/geo_infer_pep/api/: __init__.py  crm_endpoints.py  hr_endpoints.py  talent_endpoints.py
GEO-INFER-PEP/src/geo_infer_pep/core/: __init__.py  orchestrator.py  pep_engine.py  validator.py
GEO-INFER-PEP/src/geo_infer_pep/crm/: __init__.py  importer.py  transformer.py
GEO-INFER-PEP/src/geo_infer_pep/hr/: __init__.py  importer.py  transformer.py
GEO-INFER-PEP/src/geo_infer_pep/models/: __init__.py  crm_models.py  hr_models.py  talent_models.py
GEO-INFER-PEP/src/geo_infer_pep/reporting/: __init__.py  crm_reports.py  generic_report_generator.py  hr_reports.py  talent_reports.py
GEO-INFER-PEP/src/geo_infer_pep/talent/: __init__.py  importer.py  transformer.py
GEO-INFER-PEP/src/geo_infer_pep/utils/: __init__.py
GEO-INFER-PEP/src/geo_infer_pep/visualizations/: __init__.py  crm_visuals.py  hr_visuals.py  talent_visuals.py
GEO-INFER-PEP/tests/: __init__.py  test_crm.py  test_hr.py  test_methods.py  test_talent.py
GEO-INFER-PEP/tests/core/: __init__.py
GEO-INFER-PEP/tests/models/: __init__.py
GEO-INFER-PLACE/locations/cascadia/: Cascadia-To-Do.md  DATA_STRUCTURE.md  ENHANCED_FRAMEWORK.md  README.md  cascadia_main.py  cleanup_data.py  empirical_assessment_report_20250728_081141.md  main.py  pyproject.toml  requirements.txt  test_import.py  unified_backend.py  utils_h3.py
GEO-INFER-PLACE/locations/cascadia/config/: analysis_config.json  analysis_config.yaml  ca_del_norte_boundary.geojson  ca_humboldt_boundary.geojson  ca_lassen_boundary.geojson  county_boundaries.yaml  county_boundary_loader.py  data_cleanup_config.json  data_urls.json
GEO-INFER-PLACE/locations/cascadia/current_use/: __init__.py  data_sources.py  geo_infer_current_use.py
GEO-INFER-PLACE/locations/cascadia/ground_water/: __init__.py  data_sources.py  geo_infer_ground_water.py
GEO-INFER-PLACE/locations/cascadia/improvements/: __init__.py  data_sources.py  geo_infer_improvements.py
GEO-INFER-PLACE/locations/cascadia/mortgage_debt/: __init__.py  data_sources.py  geo_infer_mortgage_debt.py
GEO-INFER-PLACE/locations/cascadia/output/: cascadia_analysis_report_20250710_075929.md  cascadia_analysis_report_20250710_175709.md  cascadia_analysis_report_20250710_182042.md  cascadia_analysis_report_20250727_181855.md  cascadia_analysis_report_20250728_082022.md  cascadia_analysis_report_20250728_172455.md  cascadia_analysis_report_20250728_175244.md  cascadia_analysis_report_20250729_160831.md  cascadia_analysis_report_20250729_160956.md  cascadia_analysis_report_20250729_161156.md  cascadia_analysis_report_20250729_161251.md  cascadia_analysis_report_20250807_130728.md  cascadia_analysis_report_20250807_131921.md  cascadia_analysis_report_20250807_182035.md  cascadia_analysis_report_20250807_182053.md  cascadia_analysis_report_20250807_200449.md  cascadia_analysis_report_20250807_201726.md  cascadia_analysis_report_20250807_202457.md  cascadia_analysis_report_20250807_202647.md  cascadia_analysis_report_20250919_074215.md  cascadia_dashboard_20250710_075929.html  cascadia_dashboard_20250710_175709.html  cascadia_lightweight_data.csv  (+48 more)
(+1669 files in other folders)
