[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geo-infer-math"
version = "0.1.0"
description = "Mathematical libraries and utilities for geospatial inference"
readme = "README.md"
authors = [
    {name = "GEO-INFER Team"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis"
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "geopandas>=0.10.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "shapely>=1.8.0"
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.12",
    "black>=21.5b2",
    "isort>=5.9.0",
    "mypy>=0.812",
    "flake8>=3.9.0",
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=0.5.2"
]
gpu = [
    "tensorflow>=2.8.0",
    "torch>=1.10.0",
    "cupy>=10.0.0"
]

[project.urls]
"Homepage" = "https://github.com/geo-infer/geo-infer-math"
"Bug Tracker" = "https://github.com/geo-infer/geo-infer-math/issues"
"Documentation" = "https://geo-infer-math.readthedocs.io/"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*" 