[tool.poetry]
name = "geo-infer-pep"
version = "0.1.0"
description = "People, Engagement, and Performance (PEP) management for GEO-INFER."
authors = ["GEO-INFER Team <contact@geo-infer.org>"]
readme = "README.md"
packages = [{include = "geo_infer_pep", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
fastapi = "^0.100.0" # Example: For API
uvicorn = {extras = ["standard"], version = "^0.23.2"} # Example: For API server
pydantic = "^2.0"    # For data models
pandas = "^2.0"      # For data manipulation
matplotlib = "^3.7.0" # For visualizations
seaborn = "^0.13.0"   # For enhanced visualizations
# Add other core dependencies here: sqlalchemy, requests, etc.

[tool.poetry.dev-dependencies]
pytest = "^7.0"
ruff = "^0.1.0"
# Add other development dependencies here: coverage, mypy, etc.

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "UP", "PL", "TID"]
ignore = ["E501"] # Handled by formatter

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 