[project]
name = "cascadia"
version = "0.1.0"
description = "Cascadian Agricultural Land Analysis Framework"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "geopandas>=0.10.0",
    "shapely>=1.8.0",
    "pyproj>=3.2.0",
    "rasterio>=1.2.0",
    "fiona>=1.8.0",
    "h3>=4.0.0",
    "requests>=2.25.0",
    "urllib3>=1.26.0",
    "folium>=0.14.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "selenium>=4.0.0",
    "beautifulsoup4>=4.11.0",
    "webdriver-manager>=3.8.0",
    "lxml>=4.9.0",
    "html5lib>=1.1",
    "branca>=0.6.0",
    "jinja2>=3.1.0",
    "openpyxl>=3.0.0",
    "xlrd>=2.0.0",
    "pyyaml>=5.4.0",
    "python-dotenv>=0.19.0",
    "scikit-learn>=1.0.0",
    "networkx>=2.6.0",
    "numba>=0.54.0",
    "contextily>=1.2.0",
    "cartopy>=0.20.0",
    "pytest>=6.2.0",
    "pytest-cov>=2.12.0",
    "black>=21.0.0",
    "flake8>=3.9.0",
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=0.5.0",
    "tqdm>=4.62.0",
    "psutil>=5.9.0",
    "GitPython>=3.1.0"
]

[tool.uv]
dev-dependencies = [
    "pytest>=6.2.0",
    "pytest-cov>=2.12.0",
    "black>=21.0.0",
    "flake8>=3.9.0"
]
